# neutral-atom-vm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.oneapi  README.md  ROADMAP.md  index.html
.github/workflows/: astro-gh-pages.yml
.tracker/: addressable-site-lattices.md  advanced-backends.md  backend-geometry-coordinates.md  backend-noise-architecture-separation.md  backend-optimization.md  deployment-ops.md  epic-neutral-atom-lattice-and-configurations.md  geometry-blockade.md  hardware-isa-v1.md  hardware-vm-emulator.md  instruction-set.md  interaction-and-crosstalk-constraints.md  kirin-client.md  lattice-regions-and-config-families.md  measurement-results.md  noise-modeling.md  physics-engine-expansion.md  post-epic-lattice-integration.md  profile-configurator-geometry-ui.md  profile-geometry-editor.md  qec-primitives.md  scheduling-and-logical-time.md  service-api.md  service-implementation.md  squin-pauli-channels.md  squin-to-vm-lowering.md  stim-backend-integration.md  transport-and-rearrangement.md  ux-runtime-mismatch.md  validator-registry.md
architecture/: index.html
astro-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
astro-site/src/components/: AboutSidebar.astro  Callout.astro
astro-site/src/layouts/: BaseLayout.astro
astro-site/src/pages/: architecture.astro  hardware.astro  implementation.astro  index.astro  noise.astro  open-questions.astro  ux.astro
cmake/: vm_sources.cmake
docs/: docker-service.md  gpu-backend-roadmap.md  gpu-noise-design.md  noise.md  open-questions.md  stim-integration.md  ux.md  vm-architecture.md
implementation/: index.html
noise/: index.html
notebooks/: Remote.ipynb  Untitled.ipynb  stabilizer_demo.ipynb
open-questions/: index.html
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: benchmark_cooldown_violation.py  ghz.py  maxcut_ring.py  repetition_code_qec.py  stabilizer_syndrome_cycle.py  stabilizer_with_pauli_noise.py
python/neutral_atom_vm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/scripts/: vm_service.py
python/src/neutral_atom_vm/: __init__.py  cli.py  device.py  display.py  job.py  layouts.py  qec.py  service_client.py  squin_lowering.py  widgets.py  workflow_demo.py
python/tests/: conftest.py  squin_programs.py  test_cli.py  test_client.py  test_configuration_families.py  test_device.py  test_display.py  test_entanglement.py  test_qec_primitives.py  test_qec_stabilizer_pauli_channels.py  test_service_client.py  test_squin_lowering.py  test_widgets.py  test_workflow_demo.py
src/: cpu_state_backend.cpp  cpu_state_backend.hpp  engine_statevector.cpp  engine_statevector.hpp  hardware_vm.cpp  hardware_vm.hpp  main.cpp  noise.cpp  noise.hpp  oneapi_state_backend.cpp  oneapi_state_backend.hpp  progress_reporter.hpp  stabilizer_backend.cpp  state_backend.hpp  vm.cpp  vm.hpp
src/bindings/python/: module.cpp
src/noise/: amplitude_damping_source.cpp  amplitude_damping_source.hpp  correlated_pauli_source.cpp  correlated_pauli_source.hpp  device_noise.hpp  device_noise_builder.cpp  device_noise_builder.hpp  device_pauli_noise_source.cpp  device_pauli_noise_source.hpp  idle_dephasing_source.cpp  idle_dephasing_source.hpp  idle_phase_drift_source.cpp  idle_phase_drift_source.hpp  loss_tracking_source.cpp  loss_tracking_source.hpp  measurement_noise_source.cpp  measurement_noise_source.hpp  pauli_utils.cpp  pauli_utils.hpp  phase_kick_noise_source.cpp  phase_kick_noise_source.hpp  single_qubit_pauli_source.cpp  single_qubit_pauli_source.hpp  two_qubit_pauli_source.cpp  two_qubit_pauli_source.hpp
src/service/: job.cpp  job.hpp  job_service.cpp  job_service.hpp  job_validation.cpp  job_validation.hpp  scheduler.cpp  scheduler.hpp  timeline.hpp
src/vm/: instruction_timing.hpp  isa.hpp  measurement_record.types.hpp
test/: hardware_vm_tests.cpp  noise_tests.cpp  oneapi_gpu_tests.cpp  scheduler_tests.cpp  service_api_tests.cpp  service_job_service_tests.cpp  service_job_validation_tests.cpp  statevector_engine_sync_tests.cpp  validator_registry_tests.cpp  vm_tests.cpp
ux/: index.html
